<resources>
    <string name="app_name">SomeParking</string>
    <string name="title_booking">Бронирование</string>
    <string name="title_cars">Автомобили</string>
    <string name="title_car">Автомобиль</string>
    <string name="title_profile">Профиль</string>
    <string name="text_login">Вход</string>
    <string name="appMetricaAPIKey">754d1f1e-b25d-434b-8b5e-b0909b832164</string>
    <string name="btn_next">Далее</string>
    <string name="text_email_or_phone">Email или Номер телефона</string>
    <string name="btn_login">Войти</string>
    <string name="text_password">Пароль</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="text_account_not_found">Не удалось найти аккаунт</string>
    <string name="text_create_account">Создайте учетную запись для входа</string>
    <string name="text_when_you_register">Регистрируясь, вы принимаете условия</string>
    <string name="text_user_agreement">Пользовательского соглашения</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="text_are_you_registered">Уже зарегистрированы?</string>
    <string name="text_registered_login">Войти</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Номер телефона</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_midname">Отчество</string>
    <string name="text_name">Имя</string>
    <string name="text_car_number">Гос номер автомобиля</string>
    <string name="text_enter_your_email">Введите адрес элетронной почты</string>
    <string name="text_enter_your_surname">Введите вашу фамилию</string>
    <string name="text_enter_your_name">Введите ваше имя</string>
    <string name="text_enter_your_midname">Введите ваше отчество</string>
    <string name="text_enter_car_number">Введите гос номер автомобиля</string>
    <string name="text_come_up_password">Придумайте пароль</string>
    <string name="text_enter_phone_number">Введите номер телефона</string>
    <string name="btn_ok">OK</string>
    <string name="text_enter_correct_username">Введите корректный номер телефона или Email-адрес</string>
    <string name="text_network_error">Произошла сетевая ошибка, пожалуйста, повторите запрос позднее</string>
    <string name="text_empty_password">Введите пароль</string>
    <string name="text_code_from_sms">Код из смс</string>
    <string name="text_code_from_email">Код из Email</string>
    <string name="text_sent_to_phone_number">Отправили на номер {username}</string>
    <string name="text_sent_to_email">Отправили на email {username}</string>
    <string name="text_send_new_code_after">Получить новый код можно через {timer}</string>
    <string name="text_send_new_code">Получить новый код</string>
    <string name="text_recovery_password_title">Восстановление пароля</string>
    <string name="text_recovery_password_description">Укажите свои данные. Мы отправим код для восстановления пароля</string>
    <string name="btn_continue">Продолжить</string>
    <string name="text_change_password">Изменить пароль</string>
    <string name="btn_save">Сохранить</string>
    <string name="text_repeat_password">Повторите пароль</string>
    <string name="text_new_password">Новый пароль</string>
    <string name="text_enter_code">Введите код</string>
    <string name="btn_thanks">Спасибо</string>
    <string name="text_password_saved">Новый пароль сохранен</string>
    <string name="text_wrong_check_code">Не верный код</string>
    <string name="text_wrong_password">Не корректный пароль, измените и повторите попытку</string>
    <string name="text_different_passwords">Пароли не совпадают</string>
    <string name="text_incorrect_phone_email">Не корректный номер телефона или Email</string>
    <string name="text_incorrect_email">Не корректный Email</string>
    <string name="text_enter_email_validation_msg">Введите email в формате name@example.com</string>
    <string name="text_contacts">Контактные данные</string>
    <string name="text_personal_data">Личные данные</string>
    <string name="button_logout">Выйти</string>
    <string name="text_cars_title">Автомобили</string>
    <string name="text_add_car">Добавить автомобиль</string>
    <string name="button_book_park">Забронировать новое место</string>
    <string name="text_bookings_title">Ваши парковочные места</string>
    <string name="text_call_security">Позвонить охране</string>
    <string name="text_call_parking">Позвонить парковщику</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_unable_to_open_web_browser">Не возможно открыть браузер, повторите попытку позже</string>
    <string name="button_send">Отправить</string>
    <string name="text_call_service_to_work_place">Вызов техподдержки к рабочему месту</string>
    <string name="text_your_company">Ваша организация</string>
    <string name="text_enter_your_company_name">Введите название организации</string>
    <string name="text_workplace">Место выполнения работ</string>
    <string name="text_workplace_hint">Укажите место выполнения работ</string>
    <string name="text_feedback_text">Текст заявки</string>
    <string name="text_enter_feedback_text_hint">Введите текст заявки</string>
    <string name="text_enter_your_name_hint">Введите ФИО</string>
    <string name="text_your_full_name">ФИО</string>
    <string name="text_incorrect_phone">Введите корректный номер телефона</string>
    <string name="text_message_sent">Заявка отправлена</string>
    <string name="button_save">Сохранить</string>
    <string name="text_carnumber">Гос номер автомобиля</string>
    <string name="text_car_brand">Брэнд</string>
    <string name="text_car_model">Модель</string>
    <string name="text_enter_car_brand">Введите марку автомобиля</string>
    <string name="text_enter_car_model">Введите модель автомобиля</string>
    <string name="text_comment">Комментарий</string>
    <string name="text_enter_comment">Напишите комментарий</string>
    <string name="text_add_car_title">Добавить новый автомобиль</string>
    <string name="text_booking_parking_place">Забронируйте парковочное место</string>
    <string name="text_parking_date">Дата парковки</string>
    <string name="text_select_parking_date">Выберите дату парковки</string>
    <string name="text_date_format">%02d.%02d.%04d</string>
    <string name="text_time_format">%02d:%02d</string>
    <string name="text_time_start">Заезд</string>
    <string name="text_select_time">Введите время</string>
    <string name="text_time_end">Выезд</string>
    <string name="text_parking_place">Парковочное место</string>
    <string name="text_select_parking_place">Выберите парковочное место</string>
    <string name="text_company">Компания</string>
    <string name="text_visit_target">Цель визита</string>
    <string name="text_enter_your_target">Напишите цель визита</string>
    <string name="text_incorrect_date">Выберите дату парковки</string>
    <string name="text_incorrect_time">Выберите время</string>
    <string name="text_enter_target">Напишите цель визита</string>
    <string name="text_minutes">мин</string>
    <string name="text_parking_time">Время парковки</string>
    <string name="button_cancel_booking">Закончить бронирование</string>
    <string name="text_parking_place_format">Парковочное место ID %d</string>
    <string name="text_timer_early_format">Будет активно через %s</string>
    <string name="text_warning_title">Внимание</string>
    <string name="text_sure_to_logout_message">Вы действительно хотите выйти из аккаунта?</string>
    <string name="text_sure_to_remove_car_message">Вы действительно хотите удалить автомобиль?</string>
    <string name="text_yes">Да</string>
    <string name="text_no">Нет</string>
    <string name="text_successfull_saved">Данные успешно сохранены</string>
    <string name="text_contacts_title">Контактные данные</string>
    <string name="text_password_change">Изменить пароль</string>
    <string name="text_car_edit">Редактировать автомобиль</string>
    <string name="button_remove_car">Удалить автомобиль</string>
    <string name="text_authorization_error_message">Ошибка авторизации, пожалуйста, войдите в приложение используя логин и пароль</string>
    <string name="text_server_connection_error_message">Нет связи с сервером, пожалуйста, повторите запрос позже</string>
    <string name="text_error_title">Ошибка!</string>
    <string name="text_ok">OK</string>
</resources>