<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/primary_red">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:text="@string/text_add_car_title"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.BaseTheme.Title24Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/large_plus_size"
        android:background="@drawable/bg_top_round_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layout_carnumber,layout_brand,layout_comment,layout_model,button_add_car"/>

    <LinearLayout
        android:id="@+id/layout_carnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outline_round_gray"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:padding="@dimen/small_plus_size"
        app:layout_constraintTop_toTopOf="@id/view"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_carnumber"/>

        <EditText
            android:id="@+id/input_carnumber"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:background="@android:color/transparent"
            android:hint="@string/text_enter_car_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outline_round_gray"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:padding="@dimen/small_plus_size"
        app:layout_constraintTop_toBottomOf="@id/layout_carnumber"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_car_brand"/>

        <EditText
            android:id="@+id/input_brand"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:background="@android:color/transparent"
            android:hint="@string/text_enter_car_brand" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outline_round_gray"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:padding="@dimen/small_plus_size"
        app:layout_constraintTop_toBottomOf="@id/layout_brand"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_car_model"/>

        <EditText
            android:id="@+id/input_model"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:background="@android:color/transparent"
            android:hint="@string/text_enter_car_model" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_outline_round_gray"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginHorizontal="@dimen/medium_size"
        android:padding="@dimen/small_plus_size"
        app:layout_constraintTop_toBottomOf="@id/layout_model"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_comment"/>

        <EditText
            android:id="@+id/input_comment"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:background="@android:color/transparent"
            android:hint="@string/text_enter_comment" />
    </LinearLayout>

    <Button
        android:id="@+id/button_add_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_size"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>